Refactor project structure and add comprehensive testing infrastructure
- Introduce modular architecture with services, models, and utils
- Add comprehensive test suite for bot, database, and transaction service
- Implement robust logging mechanism
- Update .gitignore with comprehensive Python and project-specific exclusions
- Create detailed README with setup instructions and project overview
- Add requirements.txt with updated dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,64 @@
-# Ignore environment variables
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+
+# Logs
+logs/
+*.log
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Environment variables
 .env
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Ollama models and cache
+models/
+.ollama/
+
+# Matplotlib
+*.png
+*.jpg
+*.jpeg
+*.pdf
+
+# Documentation files
+*.md
+*.txt
+!README.md
+!requirements.txt
 
 # Ignore Python cache and virtual environment
 __pycache__/
